--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         <button class="turn-btn" id="turnBtn">START!</button>
 
         
-
         <div class="players">
             <div class="player player1">
                 <img src="player1.jfif" alt="Player 1">
@@ -85,7 +84,7 @@
         <div class="game-container ">
             <div class="player player1">
                 <img src="player1.jfif" alt="Player 1">
-                <div class="player-name" id="displayPlayer1Name">Player 1</div>
+                <div class="player-name" id="bdisplayPlayer1Name">Player 1</div>
                 <div class="player-icon">X</div>
                 <div class="win-rounds" id="player1Rounds">Win Rounds: 0</div>
             </div>
@@ -104,7 +103,7 @@
             </div>
             <div class="player player2">
                 <img src="player2.jfif" alt="Player 2">
-                <div class="player-name" id="displayPlayer2Name">Player 2</div>
+                <div class="player-name" id="bdisplayPlayer2Name">Player 2</div>
                 <div class="player-icon">O</div>
                 <div class="win-rounds" id="player2Rounds">Win Rounds: 0</div>
             </div>
